--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "mongoose": "~4.0.1",
     "morgan": "~1.5.0",
     "passport": "^0.3.0",
+    "passport-local": "^1.0.0",
+    "passport-oauth": "^1.0.0",
+    "passport-openid": "^0.4.0",
+    "passport-twitter": "^1.0.3",
     "serve-favicon": "~2.2.0"
   },
   "devDependencies": {
